objects/Case_History__c.object
<CustomObject>
    <fields>
        <fullName>Case_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case History</label>
        <referenceTo>Case_History__c</referenceTo>
        <relationshipLabel>Case History</relationshipLabel>
        <relationshipName>Case_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Modifying_User__c</fullName>
        <label>Case Modifying User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>This is to help track how long each Case&apos;s Status stays in each picklist value.</description>
        <label>Case Hist Mast Det</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case History</relationshipLabel>
        <relationshipName>Case_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Modifying_User_Role__c</fullName>
        <label>Modifying User Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Status_Formula__c</fullName>
        <formula>IF(ISBLANK(Old_Value__c) , (NOW() - CreatedDate) , Time_in_Status__c)</formula>
        <label>Time in Status(Formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Status__c</fullName>
        <description>How long each Case&apos;s Status stays in a particular picklist value.</description>
        <label>Time in Status</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>Time_in_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Case History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>